# Ohjelmistotuotanto-palautus-repo

./: README.md  muutos1.txt  retro.md
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: haara1.txt  haara2.txt
viikko2/poetry-web/: pyproject.toml
viikko2/src/: project.py
viikko2/verkkokauppa-1/: .coverage  pyproject.toml
viikko2/verkkokauppa-1/src/: .coverage  index.py  kauppa.py  ostoskori.py  pankki.py  varasto.py
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/src/repositories/: user_repository.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  player.py  query.py  statistics.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  kivipaperisakset.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
